--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -1,84 +1,76 @@
+
 {% extends "layout.html" %}
 
 {% block content %}
     <!--================ End Header Menu Area =================-->
         
-    <!--================Home Banner Area =================-->
+    <!--================ Home Banner Area =================-->
     <section class="banner_area">
         <div class="banner_inner d-flex align-items-center">
             <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
             <div class="container">
                 <div class="banner_content text-center">
-                    <h2>Contact Us</h2>
-                    <p>Send us a message!</p>
+                    <h2>Events Details</h2>
+                    <p>Platea nullam nostra laoreet potenti hendrerit laoreet enim nisl</p>
                 </div>
             </div>
         </div>
     </section>
-    <!--================End Home Banner Area =================-->
-    
-    <!--================Contact Area =================-->
-    <section class="contact_area section_gap" id="contact_div">
-        <div class="container">
-            <div id="mapBox" class="mapBox" 
-                data-lat="40.701083" 
-                data-lon="-74.1522848" 
-                data-zoom="13" 
-                data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-                data-mlat="40.701083"
-                data-mlon="-74.1522848">
-            </div>
+    <!--================ End Home Banner Area =================-->
 
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="contact_info">
-                        <div class="info_item">
-                            <i class="lnr lnr-home"></i>
-                            <h6></h6>
-                            <p>Tel Aviv</p>
-                        </div>
-                        <div class="info_item">
-                            <i class="lnr lnr-phone-handset"></i>
-                            <h6><a href="#">03-5341400</a></h6>
-                            <p>Sunday to Thursday between 8:30 am to 16:30 pm</p>
-                        </div>
-                        <div class="info_item">
-                            <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">rebooks@s-tov.org.il</a></h6>
-                            <p>Send us your query anytime!</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message"></textarea>
-                            </div>
-                        </div>
-                        <div class="col-md-12 text-right">
-                            <button type="submit" value="submit" class="btn primary_btn">Send Message</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--================Contact Area =================-->
-        
-	
-    <!--================ End Subscribe Area =================-->
+	<!--================ Start Recent Event Area =================-->
+	<section class="condition-area event-details-area section_gap">
+		<div class="container">
+			<div class="row align-items-center justify-content-center">
+				<div class="col-lg-6 col-md-8 col-sm-10">
+					<div class="condition-left">
+						<img class="img-fluid" src="img/event/event-details.jpg" alt="">
+					</div>
+				</div>
+				<div class="offset-lg-1 col-lg-5">
+					<div class="condition-right">
+						<h2 class="mb-20">
+							Homeless man sues couple
+                            who raised for him
+                        </h2>
+						<p>
+							If you are looking at blank cassettes on the web, you may be very confused at the difference in price You may
+							see some for as low as each. If you are looking at blank cassettes on the web, you may be very confused at the
+							difference in price You may see.
+						</p>
+						<p>
+							If you are looking at blank cassettes on the web, you may be very confused at the difference in price You may
+							see some for as low as each. If you are looking at blank cassettes on the web, you may be very confused at the
+							difference in price You may see.
+						</p>
+						<ul>
+							<li>Saturday, 15th September, 2018</li>
+							<li>Rocky beach Church</li>
+							<li>Los Angeles, USA.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    <!--================ End Recent Event Area =================-->
+
+	<!--================ Start CTA Area =================-->
+	<div class="cta-area section_gap overlay">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-7">
+					<h1>Become a volunteer</h1>
+					<p>
+						So seed seed green that winged cattle in. Gathering thing made fly you're 
+						divided deep leave on the medicene moved us land years living.
+					</p>
+					<a href="#" class="primary_btn yellow_btn rounded">join with us</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--================ End CTA Area =================-->
         
     <!--================ Start footer Area  =================-->	
     <footer>
@@ -168,41 +160,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             </div>
         </div>
     </footer>
-    <!--================ End footer Area  =================-->
-    
-    <!--================Contact Success and Error message Area =================-->
-    <div id="success" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <i class="fa fa-close"></i>
-                    </button>
-                    <h2>Thank you</h2>
-                    <p>Your message is successfully sent...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modals error -->
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <i class="fa fa-close"></i>
-                    </button>
-                    <h2>Sorry !</h2>
-                    <p> Something went wrong </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================End Contact Success and Error message Area =================-->
-        
-        
-        
+    <!--================ End footer Area  =================-->  
         
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -214,10 +172,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
         <script src="js/jquery.ajaxchimp.min.js"></script>
         <script src="js/mail-script.js"></script>
-        <!-- contact js -->
-        <script src="js/jquery.form.js"></script>
-        <script src="js/jquery.validate.min.js"></script>
-        <script src="js/contact.js"></script>
         <!--gmaps Js-->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
         <script src="js/gmaps.min.js"></script>
