--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,15 +20,6 @@
     <!--================Contact Area =================-->
     <section class="contact_area section_gap" id="contact_div">
         <div class="container">
-            <div id="mapBox" class="mapBox" 
-                data-lat="40.701083" 
-                data-lon="-74.1522848" 
-                data-zoom="13" 
-                data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-                data-mlat="40.701083"
-                data-mlon="-74.1522848">
-            </div>
-
             <div class="row">
                 <div class="col-lg-3">
                     <div class="contact_info">
@@ -75,100 +66,21 @@
             </div>
         </div>
     </section>
+
     <!--================Contact Area =================-->
         
 	
     <!--================ End Subscribe Area =================-->
+<footer>
+    <div style="background-color: #009933">
+        <p>
+        <font color="white">
+             <b><h3 > Social Media </h3></b>
+        </font>
+        </p>
         
-    <!--================ Start footer Area  =================-->	
-    <footer>
-        <div class="footer-area">
-            <div class="container">
-                <div class="row section_gap">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title large_title">Our Mission</h4>
-                            <p>
-                                So seed seed green that winged cattle in. Gathering thing made fly you're no 
-                                divided deep moved us lan Gathering thing us land years living.
-                            </p>
-                            <p>
-                                So seed seed green that winged cattle in. Gathering thing made fly you're no divided deep moved 
-                            </p>
-                        </div>
-                    </div>
-                    <div class="offset-lg-1 col-lg-2 col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title">Quick Links</h4>
-                            <ul class="list">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Causes</a></li>
-                                <li><a href="#">Event</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6">
-                        <div class="single-footer-widget instafeed">
-                            <h4 class="footer_title">Gallery</h6>
-                            <ul class="list instafeed d-flex flex-wrap">
-                                <li><img src="img/gallery/g1.jpg" alt=""></li>
-                                <li><img src="img/gallery/g2.jpg" alt=""></li>
-                                <li><img src="img/gallery/g3.jpg" alt=""></li>
-                                <li><img src="img/gallery/g4.jpg" alt=""></li>
-                                <li><img src="img/gallery/g5.jpg" alt=""></li>
-                                <li><img src="img/gallery/g6.jpg" alt=""></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title">Contact Us</h4>
-                            <div class="ml-40">
-                                <p class="sm-head">
-                                    <span class="fa fa-location-arrow"></span>
-                                    Head Office
-                                </p>
-                                <p>123, Main Street, Your City</p>
-    
-                                <p class="sm-head">
-                                    <span class="fa fa-phone"></span>
-                                    Phone Number
-                                </p>
-                                <p>
-                                    +123 456 7890 <br>
-                                    +123 456 7890
-                                </p>
-    
-                                <p class="sm-head">
-                                    <span class="fa fa-envelope"></span>
-                                    Email
-                                </p>
-                                <p>
-                                    free@infoexample.com <br>
-                                    www.infoexample.com
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row d-flex">
-                    <p class="col-lg-12 footer-text text-center">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!--================ End footer Area  =================-->
+    </div>    
+</footer>        
     
     <!--================Contact Success and Error message Area =================-->
     <div id="success" class="modal modal-message fade" role="dialog">
