--- a/templates/store.html
+++ b/templates/store.html
@@ -21,25 +21,44 @@
     <!--================ End Home Banner Area =================-->
 	
 	<!--================ Start Causes Area =================-->
+<section class="features_causes">
+        <div class="container" style="width: 100%; max-width: 1600px;">
+            {% for book in Books %}
 
-    <div>
-        {% for book in Books %}
-                <table class="center">
+            <!-- <div class="row" style="float: left">
+                <div class="col-lg-4 col-md-6"> -->
+                    
+                        <div class="card" style="width:350px; float: left; margin: 15px">
+                            <div class="jumbotron" style="background-color: #e6ffe6">
+                            <div class="card-body" style="text-align: center ; ">
+                                <div class="card_inner_body" style="padding-top: 3px; " >
 
-                    <tr>
-                        <td class="book"> <img src="../static/img/{{book.pic}}" width="150px" height="100px"> 
-                        <br>
-                        name= {{book.title}}
-                        <br>
-                        Author: {{book.authorname}}
-                        <br>
-                        price: {{book.price}} &#8362
-                    </td>                                      
-                    </tr>
+                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > {{book.title}} </font></h4> <br/>
+                                    <p class="card-text">
+                                        <div style="height: 200px">
+                                        <img src="../static/img/{{book.pic}}" alt="Card image cap" width="150px" >
+                                    </div>
+                                    </p>
+                                    <div class="d-flex justify-content-between raised_goal" style="left: 50%; position: relative; transform: translateX(-30%);">
+                                        
+                                        <p> Author: {{book.authorname}}<br/>Price: {{book.price}} &#8362</p> 
+                                        </font>
+                                        
+                                    </div>
+                                    <div class="d-flex justify-content-between donation align-items-center" style="left: 50%; position: absolute; transform: translateX(-50%);">
+                                        <a href="/store" class="primary_btn">Add to Cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+           <!--      </div>
+            </div> -->
+        {% endfor %}
+</section>
 
-                </table>
-                {% endfor %}
-        </div>
+
+
 
 
     </body>
